--- a/app/header/header.template.html
+++ b/app/header/header.template.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="core/header/style.css"/>
+<link rel="stylesheet" href="/header/style.css"/>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
     <a ng-href="{{$ctrl.welcomeLink}}" class="navbar-brand">
