--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,12 @@
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-route/angular-route.js"></script>
-  <script src="./header/header.module.js"></script>
-  <script src="./header/header.component.js"></script>
-  <script src="./footer/footer.module.js"></script>
-  <script src="./footer/footer.component.js"></script>
+  <script src="app/header/header.module.js"></script>
+  <script src="app/header/header.component.js"></script>
+  <script src="app/footer/footer.module.js"></script>
+  <script src="app/footer/footer.component.js"></script>
+  <script src="app/home/home.module.js"></script>
+  <script src="app/home/home.component.js"></script>
   <script src="app.module.js"></script>
   <script src="app.config.js"></script>
   <base href="/">
