--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
   <script src="app/footer/footer.component.js"></script>
   <script src="app/home/home.module.js"></script>
   <script src="app/home/home.component.js"></script>
+  <script src="app/contacts/contacts.module.js"></script>
+  <script src="app/contacts/contacts.component.js"></script>
   <script src="app.module.js"></script>
   <script src="app.config.js"></script>
   <base href="/">
