--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,11 @@
   <script src="app/home/home.component.js"></script>
   <script src="app/contacts/contacts.module.js"></script>
   <script src="app/contacts/contacts.component.js"></script>
+  <script src="app/advertisement/advertisement.module.js"></script>
+  <script src="app/advertisement/advertisement.component.js"></script>
+  <script src="app/advertisements/advertisements.module.js"></script>
+  <script src="app/advertisements/advertisements.component.js"></script>
+  <script src="app/advertisements/advertisements.service.js"></script>
   <script src="app.module.js"></script>
   <script src="app.config.js"></script>
   <base href="/">
